fixed dark mode bugs

--- a/front/src/app/component/payment/payment-success/payment-success.component.html
+++ b/front/src/app/component/payment/payment-success/payment-success.component.html
@@ -1,6 +1,6 @@
-<div class="container d-flex flex-column justify-content-center align-items-center" style="min-height: 80vh;">
+<div class="container d-flex flex-column justify-content-center align-items-center payment-success" style="min-height: 80vh;">
   <h1 class="h1 text-success">Payment Successful!</h1>
-  <h1 class="h3">enjoy your premium experience, share your magic with us</h1>
+  <h3 class="h3">enjoy your premium experience, share your magic with us</h3>
   <div class="controls d-flex gap-3 mt-3">
     <a class="btn btn-outline-success text-capitalize" routerLink="/profile">go to profile</a>
   </div>
