--- a/front/src/app/component/payment/payment-cancel/payment-cancel.component.html
+++ b/front/src/app/component/payment/payment-cancel/payment-cancel.component.html
@@ -1,8 +1,8 @@
-<div class="container d-flex flex-column justify-content-center align-items-center" style="min-height: 80vh;">
+<div class="container d-flex flex-column justify-content-center align-items-center payment-cancel" style="min-height: 80vh;">
   <h1 class="h1 text-danger-emphasis">looks like something went wrong</h1>
-  <h1 class="h3">consider trying again</h1>
+  <h3 class="h3">consider trying again</h3>
   <div class="controls d-flex gap-3 mt-3">
     <a class="btn btn-outline-success text-capitalize" routerLink="/payment">try again</a>
-    <a class="btn btn-outline-dark text-capitalize" routerLink="/profile">cancel</a>
+    <a class="btn btn-outline-danger text-capitalize" routerLink="/profile">cancel</a>
   </div>
 </div>
