--- a/front/src/app/component/payment/payment.component.html
+++ b/front/src/app/component/payment/payment.component.html
@@ -1,25 +1,28 @@
 <div class="container my-5 d-flex flex-column align-items-center" style="min-height: 80vh;">
   <app-top-dish-area title="Lets Get Premium!"></app-top-dish-area>
-  <div class="content-wrapper my-5 d-flex gap-4 justify-content-center">
+  <div class="content-wrapper mb-5 d-flex gap-4 justify-content-center">
     <div class="premium-section py-4 px-5 bg-warning-subtle rounded">
       <div class="title border-bottom border-success">
         <h1 class="h4 text-uppercase text-center fs-1">premium</h1>
       </div>
       <ul class="list-unstyled mt-3 p-3 px-4">
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">browse recipes</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">favorite recipes</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">leave a comment</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">Access Premium Recipes</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">share your magical recipies</span>
+        </li>
+        <li class="mb-2 fs-5">
+          <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">share your socials</span>
         </li>
       </ul>
     </div>
@@ -28,20 +31,23 @@
         <h1 class="h4 text-uppercase text-center fs-1">regular</h1>
       </div>
       <ul class="list-unstyled mt-3 p-3 px-4">
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">browse recipes</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">favorite recipes</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-check text-success me-2"></i> <span class="text-capitalize feature">leave a comment</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">Access Premium Recipes</span>
         </li>
-        <li class="mb-4 fs-5">
+        <li class="mb-2 fs-5">
           <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">share your magical recipies</span>
+        </li>
+        <li class="mb-2 fs-5">
+          <i class="fa-solid fa-xmark text-danger me-2"></i> <span class="text-capitalize feature">share your socials</span>
         </li>
       </ul>
     </div>
